unpackaged/main/default/objects/Transversal_Theme__c/Transversal_Theme__c.object-meta.xml
<CustomObject>
    <description>Object which acts as a liaison between Products and Transversal Themes</description>
    <label>Transversal Theme</label>
    <nameField>
        <displayFormat>LTT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transversal Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>