unpackaged/main/default/objects/Transversal_Theme__c/fields/Assure_Theme_Uniqueness_by_Product__c.field-meta.xml
<CustomField>
    <fullName>Assure_Theme_Uniqueness_by_Product__c</fullName>
    <description>Field used to make sure that a Theme is added only once to a Product</description>
    <label>Assure Theme Uniqueness by Product</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>