unpackaged/main/default/objects/Transversal_Theme__c/fields/Discount_Max_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Max_Level_2__c</fullName>
    <description>Used to fill in the maximal discount allowed for each 'Transversal Theme' value, for the Validation Group Level 2</description>
    <label>Discount Max - Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transversal_Theme__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Discount_Max</valueSetName>
    </valueSet>
</CustomField>