unpackaged/main/default/objects/Transversal_Theme__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product which needs to be linked to a Transversal Theme</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Linked_Transversal_Themes</relationshipName>
    <type>Lookup</type>
</CustomField>