unpackaged/main/default/objects/Transversal_Theme__c/fields/Transversal_Theme__c.field-meta.xml
<CustomField>
    <fullName>Transversal_Theme__c</fullName>
    <description>Transversal Theme which will be linked to the Product</description>
    <label>Transversal Theme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transversal_Theme</valueSetName>
    </valueSet>
</CustomField>